<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/logo_github"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/search_badge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/search_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_user"
            android:inputType="text"
            android:padding="8dp"/>

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:contentDescription="@string/search_icon"
            app:srcCompat="@drawable/ic_search_foreground" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/loading_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_users"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
