<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.userdetail.UserDetailFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_user_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/gray_card"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_back"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:clickable="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:focusable="true" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_user_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_card"
                app:layout_constraintTop_toBottomOf="@id/btn_back">

                <ImageView
                    android:id="@+id/user_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/splash"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical_card"
                app:layout_constraintTop_toTopOf="@id/card_user_profile"
                app:layout_constraintBottom_toTopOf="@id/label_login"
                android:layout_toEndOf="@+id/card_user_profile"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical_card"
                app:layout_constraintTop_toBottomOf="@id/user_name"
                app:layout_constraintBottom_toTopOf="@id/label_location"
                android:layout_marginStart="16dp"
                android:layout_marginVertical="4dp"
                android:layout_toEndOf="@+id/card_user_profile"
                android:text="@string/login_user"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/user_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/label_login"
                app:layout_constraintTop_toBottomOf="@id/label_login"
                app:layout_constraintBottom_toTopOf="@id/label_login"
                android:layout_marginStart="8dp"
                android:layout_marginVertical="4dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/label_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical_card"
                app:layout_constraintTop_toBottomOf="@id/label_login"
                app:layout_constraintBottom_toTopOf="@id/label_company"
                android:layout_marginStart="16dp"
                android:layout_marginVertical="4dp"
                android:layout_toEndOf="@+id/card_user_profile"
                android:text="@string/location_user"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/user_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/label_location"
                app:layout_constraintTop_toBottomOf="@id/label_location"
                app:layout_constraintBottom_toTopOf="@id/label_location"
                android:layout_marginStart="8dp"
                android:layout_marginVertical="4dp"
                android:layout_toEndOf="@+id/card_user_profile"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/label_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/card_user_profile"
                android:text="@string/company_user"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/card_user_profile"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical_card"
                app:layout_constraintTop_toBottomOf="@id/label_location" />

            <TextView
                android:id="@+id/user_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/label_company"
                app:layout_constraintStart_toEndOf="@id/label_company"
                app:layout_constraintTop_toBottomOf="@id/label_company" />

            <TextView
                android:id="@+id/label_followers"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:text="Followers"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
                app:layout_constraintTop_toBottomOf="@+id/card_user_profile" />

            <TextView
                android:id="@+id/user_followers"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_followers"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/guideline_vertical"
                app:layout_constraintTop_toBottomOf="@+id/label_followers" />

            <TextView
                android:id="@+id/label_following"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/label_followers"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/label_followers"
                android:text="Following"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
                app:layout_constraintTop_toBottomOf="@+id/card_user_profile" />

            <TextView
                android:id="@+id/user_following"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_following"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
                app:layout_constraintTop_toBottomOf="@+id/label_following" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/label_repositories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/repository"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_user_detail" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_repositories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_repositories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Loading Overlay -->
    <FrameLayout
        android:id="@+id/loading_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
